<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight=".40"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editTextStoreName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/txtbox"
            android:ems="10"
            android:hint="@string/store_name_hint"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/txtbox"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/address_hint"
            android:inputType="textPostalAddress"
            android:padding="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/txtbox"
            android:ems="10"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="1" >

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="left"
                android:layout_weight=".50"
                android:background="@drawable/blue_button"
                android:onClick="clearingContactInfo"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_marginRight="5dp"
                android:text="@string/clear_button"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/buttonNext"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="right"
                android:layout_weight=".50"
                android:background="@drawable/blue_button"
                android:onClick="savingContactInfo"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_marginLeft="5dp"
                android:text="@string/next_button"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>